--- a/test_canvas/style.css
+++ b/test_canvas/style.css
@@ -1,18 +1,32 @@
-#canvas1 {
-    position: absolute;
-    background: url('./warehouse_plan.jpg');
+.background {
     transform: rotate(45);
-    text-align: center;
-    padding: 0;
-    margin: auto;
     display: block;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    width: 300%;
+    height: auto;
+}
+
+.canvasContainer {
+    position: fixed;
+    left: 0px;
+    right: 0px;
+    top: 100px;
+    bottom: 100px;
+    z-index: 1;
+}
+
+.canvas1 {
+    margin: auto;
+    display: block; 
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    border: 7px solid black;
-    background-size: 100% 100%;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    z-index: 1;
 }
 
 h1 {
@@ -38,9 +52,4 @@ h1 {
     font-size: 16px;
     cursor: pointer;
     text-align: center;
-}
-
-button:hover {
-    transition: .2s;
-    background-color: red;
 }
