--- a/test_canvas/style.css
+++ b/test_canvas/style.css
@@ -1,16 +1,16 @@
-.background {
-    transform: rotate(45);
-    display: block;
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    width: 300%;
-    height: auto;
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    overflow-wrap: break-word;
 }
 
 .canvasContainer {
-    position: fixed;
+    position: relative;
     left: 0px;
     right: 0px;
     top: 100px;
@@ -19,14 +19,7 @@
 }
 
 .canvas1 {
-    margin: auto;
-    display: block; 
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0px;
-    top: 0px;
-    z-index: 1;
+    z-index: ;
 }
 
 h1 {
@@ -40,16 +33,5 @@ h1 {
     right: 0;
     text-align: center;
     font-size: 50px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
-
-.button_zone {
-    display: block;
-    width: 780px;
-    height: 465px;
-    border: none;
-    padding: 14px 28px;
-    font-size: 16px;
-    cursor: pointer;
-    text-align: center;
+    font: monospace;
 }
